# architecture

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: testing.md
docs/: ddd-best-practices.md
docs/plans/: 2026-02-19-ddd-fastapi-skeleton-design.md  2026-02-19-ddd-fastapi-skeleton-implementation.md  2026-02-19-ddd-skeleton-refactor-design.md  2026-02-19-ddd-skeleton-refactor-implementation.md
migrations/: env.py
migrations/versions/: 20260219_1311_bae8ccdeb6df.py
scripts/: new_module.py
src/app/: config.py
src/app/interfaces/: dependencies.py  exception_handler.py  main.py  middleware.py  response.py
src/app/modules/example/domain/: note.py  note_repository.py
src/app/modules/example/infrastructure/: sqlalchemy_note_repository.py
src/app/shared_kernel/application/: command_handler.py  mediator.py  query_handler.py
src/app/shared_kernel/domain/: aggregate_root.py  domain_event.py  entity.py  repository.py  value_object.py
src/app/shared_kernel/infrastructure/: database.py  logging.py  sqlalchemy_repository.py  sqlalchemy_unit_of_work.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/modules/example/: test_note_api.py
tests/architecture/: test_domain_inheritance.py  test_handler_placement.py
tests/integration/: test_sqlalchemy_uow.py
tests/unit/shared_kernel/: test_aggregate_root.py  test_domain_event.py  test_entity.py  test_mediator.py  test_unit_of_work.py  test_value_object.py
(+4 files in other folders)
